--- a/index.html
+++ b/index.html
@@ -8,23 +8,32 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul class="HeaderMenu">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">Abouts me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-        <nav class="UnderMenu">
-            <nav class="Picture">
-            <img src="resources/DSC00248.png" alt="Picture of myself">
-            </nav>
-            <nav class="MenuText">
+        <div class="container">
+            <div class="Picture">
+                <img src="resources/DSC00248.png" alt="Picture of myself">
+            </div>
+            <div class="Right">
+                <!-- Button to toggle the menu -->
+                <button class="menu-toggle" id="menu-toggle">☰</button>
 
-            </nav>
-        </nav>
-        
+                <!-- Navigation Menu -->
+                <nav class="Menu" id="nav-menu">
+                    <ul class="HeaderMenu">
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About me</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
+
+                <div class="MenuText">
+                    <h2>Welcome to My Portfolio</h2>
+                    <p>Web Developer | Designer | Programmer</p>
+                </div>
+            </div>
+        </div>
     </header>
+
+    <script src="script.js"></script>
 </body>
 </html>
