Finish waiting for text

--- a/index.html
+++ b/index.html
@@ -79,17 +79,20 @@
                     </div>
                 </div>
                 <div class="PictureAboutMe">
-                    <img src="resources/DSC00248.png" alt="My photo">
+                    <img src="resources/DSC00122 (1).png" alt="My photo">
                 </div>
             </div>
         </section>
         <section>
             <div class="ContactMe">
                 <div id="contact">
+                    <h2>
+                        <a>Contact</a>
+                        <a>me</a>
+                    </h2>
                     <form class="custom-form">
                         <input type="text" placeholder="MATEUSZ JĘDRZEJCZAK">
                         <input type="email" placeholder="EMAIL">
-                        <input type="text" placeholder="CONTACT NO">
                         <textarea placeholder="MESSAGE"></textarea>
                         <div class="form-buttons">
                             <button type="button" class="cancel">CANCEL</button>
@@ -99,6 +102,7 @@
                 </div>
                 <div class="info">
                     <a>who fail in their duty through weakness of will, which is the same as saying...</a>
+                    
                 </div>
             </div>
         </section>
