--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
     <footer>
         <p>@2024MateuszJedrzejczak.pl</p>
     </footer>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
